dropdown: fixes outline, tries fading background on mobile

--- a/apps/about/stylesheets/about.styl
+++ b/apps/about/stylesheets/about.styl
@@ -107,9 +107,6 @@
     margin 0 0 8px 0
     line-height 14px
 
-.transparent
-  opacity 0.2
-
 .static__tools__frame--supporter
   text-align left
 
